RESOLVED FIXED276640
[iPadOS] Unable to keyboard scroll until interacting with a webpage
https://bugs.webkit.org/show_bug.cgi?id=276640
Summary [iPadOS] Unable to keyboard scroll until interacting with a webpage
Abrar Rahman Protyasha
Reported 2024-07-15 18:51:26 PDT
Attachments
Abrar Rahman Protyasha
Comment 1 2024-07-15 19:43:32 PDT
EWS
Comment 2 2024-07-15 23:19:10 PDT
Committed 281001@main (939ce9ebdf62): <https://commits.webkit.org/281001@main> Reviewed commits have been landed. Closing PR #30845 and removing active labels.
EWS
Comment 3 2024-07-17 23:13:09 PDT
Committed 280938.38@integration/ci/130439406_939ce9ebdf_safari-7619-branch (0005d28388e5): <https://commits.webkit.org/280938.38@integration/ci/130439406_939ce9ebdf_safari-7619-branch> Reviewed commits have been landed. Closing PR #1393 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.