[iPadOS] Unable to keyboard scroll until interacting with a webpage https://bugs.webkit.org/show_bug.cgi?id=276640 rdar://130439406

Reviewed by Wenson Hsieh.

Since WKContentView conforms to UIKeyInput, the focus system treats it as
a text field and defers making it the focused item. This causes the
undesirable effect of having to interact with the webpage before
keyboard scroll takes effect.

Instead, in this PR, we opt out of focus deferral. This maintains our
existing behavior of immediately gain focus. We achieve this by
returning UIFocusItemDeferralModeNever for WKContentView's focus item
deferral mode.

* Source/WTF/wtf/PlatformHave.h:
* Source/WebKit/Platform/spi/ios/UIKitSPI.h:
* Source/WebKit/UIProcess/ios/WKContentView.mm:
(-[WKContentView focusItemDeferralMode]):

Canonical link: https://commits.webkit.org/281001@main