Source/WebKit/Platform/spi/ios/UIKitSPI.h
@@ -1215,6 +1215,14 @@ typedef NS_ENUM(NSUInteger, _UIScrollDeviceCategory) {
 
 @class UITextInputArrowKeyHistory;
 
+#if HAVE(UI_FOCUS_ITEM_DEFERRAL_MODE)
+// FIXME: <rdar://131799614> Remove staging code.
+
+typedef NS_ENUM(NSInteger, UIFocusItemDeferralMode);
+
+#define UIFocusItemDeferralModeNever 2
+#endif
+
 WTF_EXTERN_C_BEGIN
 
 BOOL UIKeyboardEnabledInputModesAllowOneToManyShortcuts(void);
